# SpMM

./: .gitignore  README.md  matrix.py
cuSPARSE/: Dockerfile  README.md  bspmm.h  bspmm_latency_evaluator  bspmm_latency_evaluator.cpp  matrix.py
cuSPARSE/blocked-ellpack/: Makefile  README.md
cuSPARSE/csr/: CMakeLists.txt  README.md  main.cu.cc
cuSPARSE/csr/utils/: cuda_utils.h
cuSPARSE/csr/utils/matrix/: dense.cu.cc  dense.h  matrix.h  sparse.cu.cc  sparse.h
cuSPARSE/csr/utils/spmm/: spmm.cu.cc  spmm.h
sputnik/: CMakeLists.txt  Dockerfile  README.md  SputnikConfig.h.in  main.cu.cc
sputnik/cmake/: Cuda.cmake  Dependencies.cmake
sputnik/cmake/modules/: FindGlog.cmake
sputnik/utils/: cuda_utils.h  matirx.h  matrix.cu.cc  type_utils.h
sputnik/utils/matrix/: dense.cu.cc  dense.h  matrix.h  matrix_utils.h  sparse.cu.cc  sparse.h
sputnik/utils/spmm/: spmm.cu.cc  spmm.h  spmm_utils.h
